--- a/content/img/use-case.tex
+++ b/content/img/use-case.tex
@@ -55,10 +55,10 @@
     \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
     $<$/profile\#me$>$ :email $<$bob@mail.org$>$.\\
     $<$/profile\#me$>$ :telephone "0499 12 34 56".};
-    \node[key] at (0.75,-4.55) {G1$_B$};
-    \node[key] at (0.75,-4.98) {G1$_B$};
-    \node[key] at (0.75,-5.42) {G3$_B$};
-    \node[key] at (4,-6.25) {Alice $\in$ G1$_B$, G2$_B$, G3$_B$};
+    \node[key] at (0.75,-4.55) {R1$_B$};
+    \node[key] at (0.75,-4.98) {R1$_B$};
+    \node[key] at (0.75,-5.42) {R3$_B$};
+    \node[key] at (4,-6.25) {Alice $\in$ R1$_B$, R2$_B$, R3$_B$};
     
     % Pod Carol
     \draw[fill=colorpod] (11,-6.5) rectangle (19,-1.5);
@@ -72,10 +72,10 @@
     \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
     $<$/\#i$>$ :email $<$i@carol.org$>$.\\
     $<$/\#i$>$ :telephone "0499 11 22 33".};
-    \node[key] at (11.75,-4.55) {G1$_C$};
-    \node[key] at (11.75,-4.98) {G2$_C$};
-    \node[key] at (11.75,-5.42) {G3$_C$};
-    \node[key] at (15,-6.25) {Alice $\in$ G1$_C$, G2$_C$};
+    \node[key] at (11.75,-4.55) {R1$_C$};
+    \node[key] at (11.75,-4.98) {R2$_C$};
+    \node[key] at (11.75,-5.42) {R3$_C$};
+    \node[key] at (15,-6.25) {Alice $\in$ R1$_C$, R2$_C$};
 
     % Arrows to pods
     \draw[->,thick](6.6,2.2) to [out=180,in=90] (4,-3);
