--- a/content/img/use-case.tex
+++ b/content/img/use-case.tex
@@ -13,21 +13,31 @@
 \usepackage{tikz,pgfplots}
 \usetikzlibrary{positioning,arrows,intersections,calc}
 
+\definecolor{colorwhite}    {RGB}{255,255,255}
 \definecolor{colorpod}      {RGB}{199,212,104}
 \definecolor{colorbook}     {RGB}{ 79,142,209}
 \definecolor{colorprofile}  {RGB}{143,232,186}
 \definecolor{colortext}     {RGB}{ 29, 29, 27}
 \definecolor{colorkey}      {RGB}{129, 29, 27}
-\definecolor{colorother}    {RGB}{129,129,227}
+\definecolor{colorperson}   {RGB}{190, 22, 34}
 
 \begin{document}
 \pagestyle{empty}
 \begin{tikzpicture}[
-    node distance = 10em, auto,
+    node distance = 10em, auto, thick,
     title/.style={text=colortext,font={\Large\itshape}},
+    person/.style={text=colorwhite,font={\Large\bfseries}},
     code/.style={text=colortext,font={}},
     key/.style={text=colorkey,font={\tiny\itshape}}
 ]
+
+    % Person Alice
+    \draw[fill=colorperson] (2,4) circle (30pt);
+    \node[person] at (2,4) (alice) {Alice};
+    
+    % Person Dave
+    \draw[fill=colorperson] (17,4) circle (30pt);
+    \node[person] at (17,4) (dave) {Dave};
 
     % Pod Alice
     \draw[fill=colorpod] (5.5,0) rectangle (13.5,5.5);
@@ -49,7 +59,7 @@
     \node[code,text width=10em] at (6,-2) {https://bob.pods.org/};
     
     % Profile Bob
-    \draw [fill=colorprofile] (0.5,-6) rectangle (7.5,-3);
+    \draw[fill=colorprofile] (0.5,-6) rectangle (7.5,-3);
     \node[title,text width=10em] at (2.5,-3.5) {Profile};
     \node[code,text width=10em] at (7.5,-3.5) {/profile};
     \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
@@ -58,28 +68,36 @@
     \node[key] at (0.75,-4.55) {R1$_B$};
     \node[key] at (0.75,-4.98) {R1$_B$};
     \node[key] at (0.75,-5.42) {R3$_B$};
-    \node[key] at (4,-6.25) {Alice $\in$ R1$_B$, R2$_B$, R3$_B$};
+    \node[key] at (4,-6.25) {Alice $\in$ R1$_B$, R2$_B$, R3$_B$; Dave $\in$ R1$_B$};
     
     % Pod Carol
     \draw[fill=colorpod] (11,-6.5) rectangle (19,-1.5);
     \node[title,text width=10em] at (13,-2) {Pod Carol};
-    \node[code,text width=10em] at (17,-2) {https://carol.org/};
+    \node[code,text width=10em] at (17.7,-2) {https://carol.org/};
     
     % Profile Carol
     \draw[fill=colorprofile] (11.5,-6) rectangle (18.5,-3);
     \node[title,text width=10em] at (13.5,-3.5) {Profile};
-    \node[code,text width=10em] at (18.5,-3.5) {/};
+    \node[code,text width=10em] at (19,-3.5) {/};
     \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
     $<$/\#i$>$ :email $<$i@carol.org$>$.\\
     $<$/\#i$>$ :telephone "0499 11 22 33".};
     \node[key] at (11.75,-4.55) {R1$_C$};
     \node[key] at (11.75,-4.98) {R2$_C$};
     \node[key] at (11.75,-5.42) {R3$_C$};
-    \node[key] at (15,-6.25) {Alice $\in$ R1$_C$, R2$_C$};
+    \node[key] at (15,-6.25) {Alice $\in$ R1$_C$, R2$_C$; Dave $\in$ R1$_C$};
 
-    % Arrows to pods
-    \draw[->,thick](6.6,2.2) to [out=180,in=90] (4,-3);
-    \draw[->,thick](10,1.75) to [out=0,in=90] (15,-3);
+    % Arrows between pods
+    \draw[->,thick,dashed](6.6,2.2) to [out=180,in=90] (4,-3);
+    \draw[->,thick,dashed](10,1.75) to [out=0,in=90] (15,-3);
+    
+    % Arrows from people to data
+    \draw[->,thick,colorperson] (alice) -- (6,3.5);
+    \draw[->,thick,colorperson] (alice) -- (3.5,-3);
+    \draw[->,thick,colorperson] (alice) -- (11.5,-3);
+    \draw[->,thick,colorperson] (dave)  -- (13,3.5);
+    \draw[->,thick,colorperson] (dave)  -- (7.5,-3);
+    \draw[->,thick,colorperson] (dave)  -- (15.5,-3);
 
 \end{tikzpicture}
 \end{document}
