--- a/content/references.bib
+++ b/content/references.bib
@@ -8,3 +8,80 @@
   year = {2001},
   publisher = {New York, NY, USA:}
 }
+
+@inproceedings{solid,
+  title={A demonstration of the solid platform for social web applications},
+  author={Mansour, Essam and Sambra, Andrei Vlad and Hawke, Sandro and Zereba, Maged and Capadisli, Sarven and Ghanem, Abdurrahman and Aboulnaga, Ashraf and Berners-Lee, Tim},
+  booktitle={Proceedings of the 25th International Conference Companion on World Wide Web},
+  pages={223--226},
+  year={2016},
+  organization={International World Wide Web Conferences Steering Committee}
+}
+
+@online{linkeddata,
+  title = {Linked Data},
+  author = {Berners-Lee, Tim},
+  year = 2009,
+  howpublished = {Design Issues},
+  url = {https://www.w3.org/DesignIssues/LinkedData.html},
+}
+
+
+@TechReport{spec:ldp,
+  title = {Linked Data Platform 1.0},
+  type = "Recommendation",
+  institution = "W3C",
+  author = {Speicher, Steve, John Arwe, and Ashok Malhotra},
+  month = {feb},
+  year = {2015},
+  url = {https://www.w3.org/TR/ldp/}
+}
+
+@TechReport{spec:webid,
+  title = {WebID 1.0},
+  type = "Editor's Draft",
+  institution = "W3C",
+  author = {Sporny, Manu and Inkster, Toby and Story, Henry and Harbulot, Bruno and Bachmann-Gm{\"u}r, Reto},
+  month = {mar},
+  year = {2014},
+  url = {https://www.w3.org/2005/Incubator/webid/spec/identity/}
+}
+
+@online{spec:wac,
+  title = {Web Access Control (WAC)},
+  type = "Editor's Draft",
+  year = {2019},
+  howpublished = {GitHub},
+  url = {https://github.com/solid/web-access-control-spec}
+}
+
+@TechReport{spec:sparqllang,
+  title = {SPARQL 1.1 Query Language},
+  author = {Harris, Steve and Seaborne, Andy and Prud'hommeaux, Eric},
+  type = "Recommendation",
+  institution = "W3C",
+  month = mar,
+  year = {2013},
+  url = {https://www.w3.org/TR/2013/REC-sparql11-query-20130321/}
+}
+
+@TechReport{spec:sparqlprot,
+  title = {SPARQL 1.1 Protocol},
+  author = {Feigenbaum, Lee and Todd Williams, Gregory and Grant Clark, Kendall and Torres, Elias},
+  type = "Rec.",
+  institution = "W3C",
+  month = {mar},
+  year = {2013},
+  url = {https://www.w3.org/TR/2013/REC-sparql11-protocol-20130321/}
+}
+
+@TechReport{spec:rdf,
+  title = {RDF 1.1: Concepts and Abstract Syntax},
+  type = "Recommendation",
+  institution = "W3C",
+  author = {Cyganiak, Richard and Wood, David and Lanthaler, Markus},
+  month = {feb},
+  year = {2014},
+  url = {https://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
+}
+
