Add related work on querying

--- a/content/references.bib
+++ b/content/references.bib
@@ -85,3 +85,74 @@
   url = {https://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
 }
 
+@article{summaries,
+  title={Comparing data summaries for processing live queries over linked data},
+  author={Umbrich, J{\"u}rgen and Hose, Katja and Karnstedt, Marcel and Harth, Andreas and Polleres, Axel},
+  journal={World Wide Web},
+  volume={14},
+  number={5-6},
+  pages={495--544},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{sparqlfederation,
+  title={A fine-grained evaluation of SPARQL endpoint federation systems},
+  author={Saleem, Muhammad and Khan, Yasar and Hasnain, Ali and Ermilov, Ivan and Ngonga Ngomo, Axel-Cyrille},
+  journal={Semantic Web},
+  volume={7},
+  number={5},
+  pages={493--518},
+  year={2016},
+  publisher={IOS Press}
+}
+
+@article{solid_gov,
+  author = {Buyle, Raf and Taelman, Ruben and Mostaert, Katrien and Joris, Geroen and Mannens, Erik and Verborgh, Ruben and Berners-Lee, Tim},
+  title = {Streamlining governmental processes by putting citizens in control of their personal data},
+  booktitle = {Proceedings of the 6th International Conference on Electronic Governance and Open Society: Challenges in Eurasia},
+  year = {2019},
+  month = nov,
+  url = {https://drive.verborgh.org/publications/buyle_egose_2019.pdf},
+  note = {Accepted for publication}
+}
+
+@inproceedings{comunica,
+  author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
+  title = {Comunica: a Modular SPARQL Query Engine for the Web},
+  booktitle = {Proceedings of the 17th International Semantic Web Conference},
+  year = {2018},
+  month = oct,
+  url = {https://comunica.github.io/Article-ISWC2018-Resource/}
+}
+
+@inproceedings{hypermedia_shapes,
+  title = {Declaratively Describing Responses of Hypermedia-Driven {Web} {APIs}},
+  author = {Taelman, Ruben and Verborgh, Ruben},
+  booktitle = {Proceedings of the 9th International Conference on Knowledge Capture},
+  year = {2017},
+  month = dec,
+  url = {https://linkeddatafragments.github.io/Article-Declarative-Hypermedia-Responses/}
+}
+
+@inproceedings{sparql_costly,
+  title={Sparql web-querying infrastructure: Ready for action?},
+  author={Buil-Aranda, Carlos and Hogan, Aidan and Umbrich, J{\"u}rgen and Vandenbussche, Pierre-Yves},
+  booktitle={International Semantic Web Conference},
+  pages={277--293},
+  year={2013},
+  organization={Springer}
+}
+
+@article{ldf,
+  title = {{Triple Pattern Fragments:} a Low-cost Knowledge Graph Interface for the {Web}},
+  author = {Verborgh, Ruben and Vander Sande, Miel and Hartig, Olaf and Van Herwegen, Joachim and De Vocht, Laurens and De Meester, Ben and Haesendonck, Gerald and Colpaert, Pieter},
+  journal = {Journal of Web Semantics},
+  month = mar,
+  year = 2016,
+  volume = {37--38},
+  pages.bak = {184--206},
+  issn = {1570-8268},
+  doi = {10.1016/j.websem.2016.03.003},
+  url = {http://linkeddatafragments.org/publications/jws2016.pdf},
+}
