--- a/content/references.bib
+++ b/content/references.bib
@@ -85,6 +85,16 @@
   url = {https://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
 }
 
+@TechReport{spec:ldn,
+  title = {Linked Data Notifications},
+  type = "Recommendation",
+  institution = "W3C",
+  author = {Capadisli, Sarven and Guy, Amy},
+  month = {may},
+  year = {2017},
+  url = {https://www.w3.org/TR/ldn/}
+}
+
 @article{summaries,
   title={Comparing data summaries for processing live queries over linked data},
   author={Umbrich, J{\"u}rgen and Hose, Katja and Karnstedt, Marcel and Harth, Andreas and Polleres, Axel},
