Add AMF to related work

--- a/content/references.bib
+++ b/content/references.bib
@@ -166,3 +166,65 @@
   doi = {10.1016/j.websem.2016.03.003},
   url = {http://linkeddatafragments.org/publications/jws2016.pdf},
 }
+
+@article{bloomfilter,
+  title={Space/time trade-offs in hash coding with allowable errors},
+  author={Bloom, Burton H},
+  journal={Communications of the ACM},
+  volume={13},
+  number={7},
+  pages={422--426},
+  year={1970},
+  publisher={ACM},
+  url={http://crystal.uta.edu/~mcguigan/cse6350/papers/Bloom.pdf}
+}
+
+@article{gcsfilter,
+  title={Cache-, hash-, and space-efficient bloom filters},
+  author={Putze, Felix and Sanders, Peter and Singler, Johannes},
+  journal={Journal of Experimental Algorithmics (JEA)},
+  volume={14},
+  pages={4},
+  year={2009},
+  publisher={ACM},
+  url={https://www.cs.amherst.edu/~ccmcgeoch/cs34/papers/cacheefficientbloomfilters-jea.pdf}
+}
+
+@inproceedings{bloomIO,
+  title={AWETO: efficient incremental update and querying in RDF storage system},
+  author={Pu, Xu and Wang, Jianyong and Luo, Ping and Wang, Min},
+  booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
+  pages.bak={2445--2448},
+  year={2011},
+  organization.bak={ACM},
+  url={https://dl.acm.org/citation.cfm?doid=2063576.2063988}
+}
+
+@inproceedings{bloomjoinslarge,
+  title={Scalable join processing on very large RDF graphs},
+  author={Neumann, Thomas and Weikum, Gerhard},
+  booktitle={Proceedings of the 2009 ACM SIGMOD International Conference on Management of data},
+  pages={627--640},
+  year={2009},
+  organization={ACM},   url={https://www.researchgate.net/profile/Thomas_Neumann2/publication/47863714_Scalable_Join_Processing_on_Very_Large_RDF_Graphs/links/00b7d51d1687cae740000000.pdf}
+}
+
+@inproceedings{tpf_amf,
+  title={Opportunistic Linked Data querying through approximate membership metadata},
+  author={Vander Sande, Miel and Verborgh, Ruben and Van Herwegen, Joachim and Mannens, Erik and Van de Walle, Rik},
+  booktitle={International Semantic Web Conference},
+  pages={92--110},
+  year={2015},
+  organization={Springer},
+  url={http://linkeddatafragments.org/publications/iswc2015-amf.pdf}
+}
+
+@inproceedings{bloomsparqlask,
+  title={Towards benefit-based RDF source selection for SPARQL queries},
+  author={Hose, Katja and Schenkel, Ralf},
+  booktitle={Proceedings of the 4th International Workshop on Semantic Web Information Management},
+  pages={2},
+  year={2012},
+  organization={ACM},
+  url={https://domino.mpi-inf.mpg.de/intranet/ag5/ag5publ.nsf/0/DAAD136B50B0C0ECC12579E6004D6582/$file/p2-hose.pdf}
+}
