Add WAC extensions to related work

--- a/content/references.bib
+++ b/content/references.bib
@@ -228,3 +228,20 @@
   organization={ACM},
   url={https://domino.mpi-inf.mpg.de/intranet/ag5/ag5publ.nsf/0/DAAD136B50B0C0ECC12579E6004D6582/$file/p2-hose.pdf}
 }
+
+@inproceedings{wac_ppo,
+  title={A Privacy Preference Ontology (PPO) for Linked Data.},
+  author={Sacco, Owen and Passant, Alexandre},
+  booktitle={LDOW},
+  year={2011},
+  organization={Citeseer}
+}
+
+@inproceedings{wac_ext,
+  title={An access control model for linked data},
+  author={Villata, Serena and Delaforge, Nicolas and Gandon, Fabien and Gyrard, Amelie},
+  booktitle={OTM Confederated International Conferences" On the Move to Meaningful Internet Systems"},
+  pages={454--463},
+  year={2011},
+  organization={Springer}
+}
