Add link traversal to related work

--- a/content/references.bib
+++ b/content/references.bib
@@ -245,3 +245,14 @@
   year={2011},
   organization={Springer}
 }
+
+@article{linktraversal,
+  title={An overview on execution strategies for Linked Data queries},
+  author={Hartig, Olaf},
+  journal={Datenbank-Spektrum},
+  volume={13},
+  number={2},
+  pages={89--99},
+  year={2013},
+  publisher={Springer}
+}
