Clarify plurality of aggregators in architecture figure

--- a/content/img/privacy-federation-architecture.tex
+++ b/content/img/privacy-federation-architecture.tex
@@ -68,6 +68,8 @@
     \node[title,text width=10em] at (27.4,2) {Summary 2};
     
     % Aggregator
+    \draw[fill=colorpod,dashed] (5.7,-4.8) rectangle (13.2,-0.3);
+    \draw[fill=colorpod,dashed] (5.6,-4.9) rectangle (13.1,-0.4);
     \draw[fill=colorpod,dashed] (5.5,-5) rectangle (13,-0.5);
     \node[title,text width=10em] at (7.5,-4.5) {Aggregator};
     \draw[fill=colorsummary] (6,-3.5) rectangle (12.5,-1);
