Restructure federated querying section

--- a/content/references.bib
+++ b/content/references.bib
@@ -256,3 +256,12 @@
   year={2013},
   publisher={Springer}
 }
+
+@article{summaries_heritage,
+  author = {Vander Sande, Miel and de Valk, Sjors and Meijers, Enno and Taelman, Ruben and Van de Sompel, Herbert and Verborgh, Ruben},
+  title = {Discovering Data Sources in a Distributed Network of Heritage Information},
+  booktitle = {Proceedings of the Posters and Demo Track of the 15th International Conference on Semantic Systems},
+  year = {2019},
+  month = oct,
+  url = {http://ceur-ws.org/Vol-2451/paper-28.pdf}
+}
