added openid, webid, ssi overview

--- a/content/references.bib
+++ b/content/references.bib
@@ -265,3 +265,48 @@
   month = oct,
   url = {http://ceur-ws.org/Vol-2451/paper-28.pdf}
 }
+
+@techreport{Sambra2014,
+author = {Andrei Sambra and Henry Story and Tim Berners-Lee},
+Institution = {{W3C}},
+Month = {March},
+Title = {{Web Identity and Discovery}},
+Type = {{W3C Editor's Draft, available at \url{http://www.w3.org/2005/Incubator/webid/spec/identity/}}},
+Year = {2014},
+}
+
+@techreport{Inkster2014,
+Author = {Toby Inkster and Henry Story and Bruno Harbulot},
+Institution = {{W3C}},
+Month = {March},
+Title = {{WebID Authentication over TLS}},
+Type = {{W3C Editor's Draft, available at \url{http://www.w3.org/2005/Incubator/webid/spec/tls/}}},
+Year = {2014},
+}
+
+@inproceedings{Hollenbach2009,
+title={Using rdf metadata to enable access control on the social semantic web},
+author={Hollenbach, James and Presbrey, Joe and Berners-Lee, Tim},
+booktitle={Proceedings of the Workshop on Collaborative Construction, Management and Linking of Structured Knowledge (CK2009)},
+volume={514},
+year={2009}
+}
+
+@article{muhle2018survey,
+  title={A survey on essential components of a self-sovereign identity},
+  author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
+  journal={Computer Science Review},
+  volume={30},
+  pages={80--86},
+  year={2018},
+  publisher={Elsevier}
+}
+
+
+@inproceedings{fett2017web,
+  title={The web SSO standard openid connect: In-depth formal security analysis and security guidelines},
+  author={Fett, Daniel and K{\"u}sters, Ralf and Schmitz, Guido},
+  booktitle={2017 IEEE 30th Computer Security Foundations Symposium (CSF)},
+  pages={189--202},
+  year={2017},
+  organization={IEEE}
