--- a/content/img/general_process.tex
+++ b/content/img/general_process.tex
@@ -11,7 +11,7 @@
 \let\familydefault\sfdefault
 
 
-\usepackage{tikz,pgfplots}
+\usepackage{tikz,pgfplots,tikzpeople,tikz-layers}
 \usetikzlibrary{positioning,arrows,intersections,calc,fit,shapes}
 
 \definecolor{colorwhite}    {RGB}{255,255,255}
@@ -52,54 +52,7 @@
 \pagestyle{empty}
 
 % ======================================= V
-\newcommand{\stickman}[4]{% \stickman ==== V
-    \def\x{#1} % center x
-    \def\y{#2} % center y
-    \def\r{#3} % radius
-    \def\name{#4} % name
-    \def\xl{\x-\r} % x left 
-    \def\xr{\x + \r} % x right
-    \def\ya{\y-\r} % body upper
-    \def\yb{\ya-\r} % arms
-    \def\yc{\yb-\r} % legs
-    \def\ybd{\yb-0.5*\r} % arms lower
-    \def\ycd{\yc-0.5*\r} % legs lower
 
-    \draw[
-        thick, orange
-    ]
-    (\x, \y) circle (\r) % head
-    (\x, \y) node {\name}
-    (\x, \ya) -- (\x,\yc) % body
-    (\xl, \ybd) -- (\x, \yb) -- (\xr, \ybd) %arms
-    (\xl, \ycd) -- (\x, \yc) -- (\xr, \ycd) %arms
-    ; %
-} % \stickman ==== A
-% ======================================= A
-
-% ======================================= V
-% \begin{tikzpicture}
-
-% %   % no name
-% %   \stickman{3}{3}{1} {}
-
-%     % generation
-%     \stickman{1}{3}{0.4} {a}
-%     \stickman{1.8}{4.3}{0.4} {b}
-%     \stickman{3}{4.8}{0.3} {$c_{i}$}
-%     \stickman{3.1}{2}{0.4} {}
-%     \stickman{4}{3}{0.5} {}
-
-%     % i, j
-%     \stickman{6}{3}{0.2} {i}
-%     \stickman{9}{3}{1} {j}
-
-%     %
-% %   \stickman{6}{3}{1}{}
-% %   \stickman{9}{4}{1}{}
-% %   \stickman{4.5}{4}{1}{}
-% \end{tikzpicture}
-% ===
 
 \begin{tikzpicture}[
     node distance = 10em, auto, thick,
@@ -122,7 +75,7 @@
   
     % \node[datastore] (storage) {storage};     \& \node[process] (monitor) {monitor};  \& \node[sink] (datastore) {datastore}; \\
     \matrix{
-      \node[process] (ALICE) {Alice}; \& \node[sink] (AW) {Authentication \\ WebID}; \& \node[sink] (ACP) {AC Policy $\langle S,A,R\rangle$\\\\}; \& \node[db,cylinder,shape border rotate=90,shape aspect=.25] (DS) {Datastore};\\
+      \node[alice,minimum size=2em,label={[label distance=0.1em]below:Alice}] (ALICE){}; \& \node[sink] (AW) {Authentication \\ WebID}; \& \node[sink] (ACP) {AC Policy $\langle S,A,R\rangle$\\\\}; \& \node[db,cylinder,shape border rotate=90,shape aspect=.25, text opacity=0] (DS) {\phantom{Datastore}};\\
     };
     \node[draw,fill=orange!30] at ([yshift=0.75cm]ACP.south){SHACL Shape};
     % Draw the arrows between the nodes and label them.
@@ -131,82 +84,13 @@
     \draw[to] (ACP) -- node[midway,above] {Query} (DS);
     \draw[to] (DS) to[bend left=25] node[midway,below] {Results} (ALICE);
 
-    % \draw[to] (AW) -- node[midway,right] {raw event data\\level 1} (buffer);
-    % \draw[to] (buffer) --
-    %     node[midway,right] {raw event data\\level 1} (monitor);
-    % \draw[to] (monitor) to[bend left=50] node[midway,above] {events}
-    %     node[midway,below] {level 1} (storage);
-    % \draw[to] (storage) to[bend right=50] node[midway,above] {events}
-    %     node[midway,below] {level 1} (monitor);
-    % \draw[to] (monitor) -- node[midway,above] {events}
-    %     node[midway,below] {level 1} (datastore);
+    \begin{scope}[on behind layer]
+            \path (AW.south west)+(-0.3,-0.3) node (a2) {};
+        \path (DS.north east)+(1,0.8) node (b2) {};
+		\draw[fill=blue!10,rounded corners, draw=black!50, dashed]
+      (a2) rectangle (b2);
+      \node[title,font={\itshape},above right=0.4em and -1.5em of DS] {Server};
 
-    % % Person Alice
-    % \draw[fill=colorperson] (2,4) circle (30pt);
-    % \node[person] at (2,4) (alice) {Alice};
-    
-    % % % Person Dave
-    % % \draw[fill=colorperson] (17,4) circle (30pt);
-    % % \node[person] at (17,4) (dave) {Dave};
-
-    % % % Pod Alice
-    % % \draw[fill=colorpod] (5.5,0) rectangle (13.5,5.5);
-    % % \node[title,text width=10em] at (7.5,5) {Authentication WebID};
-
-    % % Address Book Alice
-    % \draw[fill=colorbook] (6,0.5) rectangle (13,4);
-    % \node[title,text width=10em] at (8,3.5) {Authentication};
-    % \node[code,text width=10em] at (13,3.5) {WebID};
-    % \node[code,text width=20em] at (9.8,2) {$<$/profile\#me$>$ :knows\\
-    % \ \ $<$https://bob.pods.org/profile\#me$>$,\\
-    % \ \ $<$https://carol.org/\#i$>$,\\
-    % \ldots};
-    
-    % % Pod Bob
-    % \draw[fill=colorpod] (0,-6.5) rectangle (8,-1.5);
-    % \node[title,text width=10em] at (2,-2) {Pod Bob};
-    % \node[code,text width=10em] at (6,-2) {https://bob.pods.org/};
-    
-    % % Profile Bob
-    % \draw[fill=colorprofile] (0.5,-6) rectangle (7.5,-3);
-    % \node[title,text width=10em] at (2.5,-3.5) {Profile};
-    % \node[code,text width=10em] at (7.5,-3.5) {/profile};
-    % \node[code,text width=20em] at (4.3,-5) {$<$/profile\#me$>$ :name "Bob".\\
-    % $<$/profile\#me$>$ :email $<$bob@mail.org$>$.\\
-    % $<$/profile\#me$>$ :telephone "0499 12 222a".};
-    % \node[key] at (0.75,-4.55) {R1$_B$};
-    % \node[key] at (0.75,-4.98) {R1$_B$};
-    % \node[key] at (0.75,-5.42) {R3$_B$};
-    % \node[key] at (4,-6.25) {Alice $\in$ R1$_B$, R2$_B$, R3$_B$; Dave $\in$ R1$_B$};
-    
-    % % Pod Carol
-    % \draw[fill=colorpod] (11,-6.5) rectangle (19,-1.5);
-    % \node[title,text width=10em] at (13,-2) {Pod Carol};
-    % \node[code,text width=10em] at (17.7,-2) {https://carol.org/};
-    
-    % % Profile Carol
-    % \draw[fill=colorprofile] (11.5,-6) rectangle (18.5,-3);
-    % \node[title,text width=10em] at (13.5,-3.5) {Profile};
-    % \node[code,text width=10em] at (19,-3.5) {/};
-    % \node[code,text width=20em] at (15.3,-5) {$<$/\#i$>$ :name "Carol".\\
-    % $<$/\#i$>$ :email $<$i@carol.org$>$.\\
-    % $<$/\#i$>$ :telephone "0499 11 22 33".};
-    % \node[key] at (11.75,-4.55) {R1$_C$};
-    % \node[key] at (11.75,-4.98) {R2$_C$};
-    % \node[key] at (11.75,-5.42) {R3$_C$};
-    % \node[key] at (15,-6.25) {Alice $\in$ R1$_C$, R2$_C$; Dave $\in$ R1$_C$};
-
-    % % Arrows between pods
-    % \draw[->,thick,dashed](6.6,2.2) to [out=180,in=90] (4,-3);
-    % \draw[->,thick,dashed](10,1.75) to [out=0,in=90] (15,-3);
-    
-    % % Arrows from people to data
-    % \draw[->,thick,colorperson] (alice) -- (6,3.5);
-    % \draw[->,thick,colorperson] (alice) -- (3.5,-3);
-    % \draw[->,thick,colorperson] (alice) -- (11.5,-3);
-    % \draw[->,thick,colorperson] (dave)  -- (13,3.5);
-    % \draw[->,thick,colorperson] (dave)  -- (7.5,-3);
-    % \draw[->,thick,colorperson] (dave)  -- (15.5,-3);
-
+      \end{scope}
 \end{tikzpicture}
 \end{document}
