Improve link between summarization algos

--- a/content/img/summary-components.tex
+++ b/content/img/summary-components.tex
@@ -47,7 +47,7 @@
     \node[code,text width=2em] at (11,2.2) {G1\\G2\\\ldots};
 
     % Arrows
-    \draw[->,thick,colortext] (4,2) -- (7,2) node[midway] {SummarizeFile};
+    \draw[->,thick,colortext] (4,2) -- (7,2) node[midway] {CreateSummary};
 
 \end{tikzpicture}
 \end{document}
