restructured the framewok and solution

--- a/content/references.bib
+++ b/content/references.bib
@@ -311,3 +311,43 @@ year={2009}
   year={2017},
   organization={IEEE}
 }
+
+@TechReport{OpenIDConnect,
+  title = {OpenID Connect Core 1.0},
+  type = "Specification",
+  institution = "OpenID Foundation",
+  author = {N. Sakimura and J. Bradley and M. Jones and B. de Medeiros and C. Mortimore},
+  month = {November},
+  year = {2014},
+  url = {https://openid.net/specs/openid-connect-core-1_0.html }
+}
+
+@TechReport{WebID,
+  title = {Web Identity and Discovery},
+  type = "Editor's Draft",
+  institution = "WebID Incubator Group",
+  author = {Andrei Sambra and Henry Story and Tim Berners-Lee},
+  month = {March},
+  year = {2014},
+  url = { https://www.w3.org/2005/Incubator/webid/spec/identity/ }
+}
+
+@article{muhle2018survey,
+  title={A survey on essential components of a self-sovereign identity},
+  author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
+  journal={Computer Science Review},
+  volume={30},
+  pages={80--86},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@TechReport{SSI,
+  title = {Self-Sovereign Identity: Whitepaper about the Concept of Self-Sovereign Identity including its Potential},
+  type = "Whitepaper",
+  institution = "EGIZ",
+  author = {Andreas Abraham},
+  month = {October},
+  year = {2017},
+  url = { https://www.egiz.gv.at/files/download/Self-Sovereign-Identity-Whitepaper.pdf}
+}
