--- a/content/references.bib
+++ b/content/references.bib
@@ -9,6 +9,13 @@
   publisher = {New York, NY, USA:}
 }
 
+@inproceedings{sbischof15,
+  author    = {Bischof, Stefan},
+  title     = {Improving Practical Reasoning on top of SPARQL},
+  booktitle = {Proceedings of the International Conference on Web Reasoning and Rule Systems, Doctoral Consortium, Berlin, Germany, August 2-5, 2015},
+  year      = {2015}
+}
+
 @inproceedings{solid,
   title={A demonstration of the solid platform for social web applications},
   author={Mansour, Essam and Sambra, Andrei Vlad and Hawke, Sandro and Zereba, Maged and Capadisli, Sarven and Ghanem, Abdurrahman and Aboulnaga, Ashraf and Berners-Lee, Tim},
@@ -18,12 +25,38 @@
   organization={International World Wide Web Conferences Steering Committee}
 }
 
+@InProceedings{sameas,
+author={Halpin, Harry
+and Hayes, Patrick J.
+and McCusker, James P.
+and McGuinness, Deborah L.
+and Thompson, Henry S.},
+title={When owl:sameAs Isn't the Same: An Analysis of Identity in Linked Data},
+booktitle={The Semantic Web -- ISWC 2010},
+year={2010},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={305--320},
+abstract={In Linked Data, the use of owl:sameAs is ubiquitous in interlinking data-sets. There is however, ongoing discussion about its use, and potential misuse, particularly with regards to interactions with inference. In fact, owl:sameAs can be viewed as encoding only one point on a scale of similarity, one that is often too strong for many of its current uses. We describe how referentially opaque contexts that do not allow inference exist, and then outline some varieties of referentially-opaque alternatives to owl:sameAs. Finally, we report on an empirical experiment over randomly selected owl:sameAs statements from the Web of data. This theoretical apparatus and experiment shed light upon how owl:sameAs is being used (and misused) on the Web of data.},
+isbn={978-3-642-17746-0}
+}
+
+
+
 @online{linkeddata,
   title = {Linked Data},
   author = {Berners-Lee, Tim},
   year = 2009,
   howpublished = {Design Issues},
   url = {https://www.w3.org/DesignIssues/LinkedData.html},
+}
+
+@online{desiss:shapes,
+  title = {Linked DataLinked Data Shapes, Forms and Footprints},
+  author = {Berners-Lee, Tim},
+  year = 2019,
+  howpublished = {Design Issues},
+  url = {https://www.w3.org/DesignIssues/Footprints.html},
 }
 
 
@@ -93,6 +126,16 @@
   month = {may},
   year = {2017},
   url = {https://www.w3.org/TR/ldn/}
+}
+
+@TechReport{spec:shacl,
+  title = {Shapes Constraint Language (SHACL)},
+  type = "Recommendation",
+  institution = "W3C",
+  author = {Knublauch, Holger and Kontokostas, Dimitris},
+  month = {july},
+  year = {2017},
+  url = {https://www.w3.org/TR/shacl/}
 }
 
 @article{summaries,
@@ -206,7 +249,8 @@
   booktitle={Proceedings of the 2009 ACM SIGMOD International Conference on Management of data},
   pages={627--640},
   year={2009},
-  organization={ACM},   url={https://www.researchgate.net/profile/Thomas_Neumann2/publication/47863714_Scalable_Join_Processing_on_Very_Large_RDF_Graphs/links/00b7d51d1687cae740000000.pdf}
+  organization={ACM},
+  url={https://www.researchgate.net/profile/Thomas_Neumann2/publication/47863714_Scalable_Join_Processing_on_Very_Large_RDF_Graphs/links/00b7d51d1687cae740000000.pdf}
 }
 
 @inproceedings{tpf_amf,
