reworked the structured, authentication and access control rw

--- a/content/references.bib
+++ b/content/references.bib
@@ -395,3 +395,78 @@ year={2009}
   year = {2017},
   url = { https://www.egiz.gv.at/files/download/Self-Sovereign-Identity-Whitepaper.pdf}
 }
+
+@inproceedings{Villata2011,
+author    = {Serena Villata and Nicolas Delaforge and Fabien Gandon and Amelie Gyrard},
+title     = {An Access Control Model for Linked Data},
+booktitle = {On the Move to Meaningful Internet Systems: OTM 2011 Workshops},
+year      = {2011},
+pages     = {454-463},
+ee        = {http://dx.doi.org/10.1007/978-3-642-25126-9_57},
+}
+
+@inproceedings{Sacco2011b,
+author    = {Owen Sacco and Alexandre Passant},
+title     = {A Privacy Preference Manager for the Social Semantic Web},
+booktitle = {Semantic Personalized Information Management: Retrieval and Recommendation},
+year      = {2011},
+url        = {http://ceur-ws.org/Vol-781/paper6.pdf},
+publisher = {CEUR-WS},
+}
+
+@inproceedings{Kirrane2013,
+year={2013},
+booktitle={Security and Privacy Protection in Information Processing Systems},
+volume={405},
+series={IFIP Advances in Information and Communication Technology},
+title={Applying DAC Principles to the RDF Graph Data Model},
+url={http://dx.doi.org/10.1007/978-3-642-39218-4_6},
+publisher={Springer Berlin Heidelberg},
+author={Kirrane, Sabrina and Mileo, Alessandra and Decker, Stefan},
+pages={69-82},
+}
+
+@inproceedings{kasten2013towards,
+  title={Towards search on encrypted graph data},
+  author={Kasten, Andreas and Scherp, Ansgar and Armknecht, Frederik and Krause, Matthias},
+  booktitle={Proc. of the International Conference on Society, Privacy and the Semantic Web-Policy and Technology},
+  pages={46--57},
+  year={2013}
+}
+
+@inproceedings{giereth2005partial,
+  author = {Giereth, Mark},
+  booktitle = {Proc. of International Semantic Web Conference},
+  pages = {308-322},
+  title = {{On Partial Encryption of RDF-Graphs.}},
+  volume = 3729,
+  year = 2005
+}
+
+@inproceedings{fernandez2017self,
+  title={Self-Enforcing Access Control for Encrypted RDF},
+  author={Fern{\'a}ndez, Javier D and Kirrane, Sabrina and Polleres, Axel and Steyskal, Simon},
+  booktitle={European Semantic Web Conference},
+  pages={607--622},
+  year={2017},
+  organization={Springer}
+}
+
+@article{kirrane2017access,
+  title={Access control and the resource description framework: A survey},
+  author={Kirrane, Sabrina and Mileo, Alessandra and Decker, Stefan},
+  journal={Semantic Web},
+  volume={8},
+  number={2},
+  pages={311--352},
+  year={2017},
+  publisher={IOS Press},
+  url={http://www.semantic-web-journal.net/system/files/swj1280.pdf}
+}
+
+@misc{WebAccessControl,
+Author = {W3C},
+Year = {n.d.},
+title = {WebAccessControl},
+note = {Accessed 13 January 2018, available at \url{https://www.w3.org/wiki/WebAccessControl}}
+}
