--- a/content/references.bib
+++ b/content/references.bib
@@ -71,7 +71,7 @@ isbn={978-3-642-17746-0}
 }
 
 @TechReport{spec:webid,
-  title = {WebID 1.0},
+  title = {WebID 1.0 Web Identity and Discovery},
   type = "Editor's Draft",
   institution = "W3C",
   author = {Sporny, Manu and Inkster, Toby and Story, Henry and Harbulot, Bruno and Bachmann-Gm{\"u}r, Reto},
@@ -366,15 +366,6 @@ year={2009}
   url = {https://openid.net/specs/openid-connect-core-1_0.html }
 }
 
-@TechReport{WebID,
-  title = {Web Identity and Discovery},
-  type = "Editor's Draft",
-  institution = "WebID Incubator Group",
-  author = {Andrei Sambra and Henry Story and Tim Berners-Lee},
-  month = {March},
-  year = {2014},
-  url = { https://www.w3.org/2005/Incubator/webid/spec/identity/ }
-}
 
 @article{muhle2018survey,
   title={A survey on essential components of a self-sovereign identity},
@@ -464,9 +455,4 @@ pages={69-82},
   url={http://www.semantic-web-journal.net/system/files/swj1280.pdf}
 }
 
-@misc{WebAccessControl,
-Author = {W3C},
-Year = {n.d.},
-title = {WebAccessControl},
-note = {Accessed 13 January 2018, available at \url{https://www.w3.org/wiki/WebAccessControl}}
-}
+
